@@ -73,6 +73,7 @@
 46. Add context menu to replygain and file orgainuzer dialogs to remove items
     from list.
 47. Also use discogs for artist images in cover dialog.
+48. Fix invalid covers showing for online services.
 
 1.0.3
 -----
